# libcosimc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  conanfile.py
.github/workflows/: ci-conan.yml  ci-workflow.yml
cmake/: project-config.cmake.in
include/: cosim.h
src/: cosim.cpp  lib_info.cpp.in
tests/: connections_test.c  ecco_algorithm_multi_bond_test.c  execution_from_cse_config_test.c  execution_from_osp_config_test.c  execution_from_ssp_custom_algo_test.c  execution_from_ssp_test.c  inital_values_test.c  load_config_and_teardown_test.c  multiple_fmus_execution_test.c  observer_can_buffer_samples.c  observer_initial_samples_test.c  observer_multiple_slaves_test.c  simulation_error_handling_test.c  single_fmu_execution_test.c  time_series_observer_test.c  variable_metadata_test.c
tests/data/ssp/demo/: SystemStructure.ssd
tests/data/ssp/demo/no_algorithm_element/: SystemStructure.ssd
